# emoji

./: README.md  endstone-emoji-resources-pack.mcpack  pyproject.toml
.github/workflows/: publish.yml
src/endstone_emoji/: __init__.py  config.toml  emoji_api.py  emoji_plugin.py
